[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litenews"
version = "0.1.0"
description = "A modular LangGraph agent for news writing automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "LiteNews Team" }
]
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-sdk>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-perplexity>=1.1.0",
    "langchain-qwq>=0.1.0",
    "langchain-tavily>=0.1.0",
    "langsmith>=0.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "streamlit-authenticator>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/litenews"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/litenews/workflow/write_few_shots.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
